--- a/templates/user_verse/channel_post_list.html
+++ b/templates/user_verse/channel_post_list.html
@@ -80,12 +80,12 @@
 
 {% block js %}
 <script src="{% static 'main_page.js' %}"></script>
-<script>
+<!-- <script>
     document.querySelectorAll('.dynamic-image').forEach(img => {
     img.onerror = () => {
       img.src = '{% static "default_image.jpg" %}';
     };
   });
-</script>
+</script> -->
 {% endblock %}
 
