--- a/templates/user_verse/channel_list.html
+++ b/templates/user_verse/channel_list.html
@@ -93,7 +93,7 @@
                               <h2 class="fw-semibold"></h2>
                               <p class="fs-5 text-dark">
                                   - It is very easy to connect your Telegram channel to VERSE<br>
-                                  - Just add this <a style="text-decoration: none" href="#" onclick="executeScriptAndRedirect('https://t.me/easy_typer_bot'); return false;">EasyTyper</a> bot to your channel or group chat<br>
+                                  - Just add this <a style="text-decoration: none" href="#" onclick="executeScriptAndRedirect('https://t.me/verse_uz_bot'); return false;">VERSE</a> bot to your channel or group chat<br>
                               </p>
                               <p class="fs-5 pt-2 text-dark" id="notification-message">
                                   The channel you added will appear on the screen!
