--- a/templates/user_verse/text_area.html
+++ b/templates/user_verse/text_area.html
@@ -19,34 +19,57 @@
                 <div id="error-message" class="alert alert-danger" style="display: none;"></div>
                 
                 
-                    <div id="channel-info" class="p-3" data-channel-id="{{channel_id}}">
-                        <h3 class="text-light">Channel |  <a href="{% url 'post-list' channel_id %}" style="text-decoration: none; color: white"><span class="fs-2 fw-bolder">{{channel_name}}</span></a></h3>
+                <div id="channel-info" class="p-3" data-channel-id="{{channel_id}}">
+                    <h3 class="text-light">Channel |  <a href="{% url 'post-list' channel_id %}" style="text-decoration: none; color: white"><span class="fs-2 fw-bolder">{{channel_name}}</span></a></h3>
+                </div>
+                {% if route == 'post-create' %} 
+                <form method="POST" action="{% url 'post-create' channel_id=channel_id%}" autocomplete="off">
+                {% elif route == 'post-update' %}
+                <form method="POST" action="{% url 'post-update' channel_id=channel_id post_id=post.id%}" autocomplete="off">
+                {% endif %}    
+                    {% csrf_token %}
+                    {% if form.errors %}
+                        <div class="alert alert-danger" role="alert">
+                            <strong>Error!</strong> Please correct the following errors:
+                            <ul>
+                                {% for field, errors in form.errors.items %}
+                                    {% for error in errors %}
+                                        <li><!--{{ field }}: -->{{ error }}</li>
+                                    {% endfor %}
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
+                    <div class="d-flex align-items-center justify-content-center">
+                        {{ form.title }}
                     </div>
-               
-                    
-                <div class="editor editor-title editor-content-title editor-placeholder" contenteditable="true" 
+        
+                    <!-- Content Field -->
+                    <div class="d-flex align-items-center justify-content-center">
+                        {{ form.content }}
+                    </div>
+                    {% if post %}
+                        <div id="post-id" class="d-flex justify-content-end" data-post-id="{{post.id}}">
+                            <button type="submit" class="btn btn-lg mt-3 px-5 bg-dark text-light fs-1"> 
+                                Update
+                            </button>
+                        </div> 
+                    {% else %}
+                        <div class="d-flex justify-content-end">
+                            <button type="submit" class="btn btn-lg mt-3 px-5 bg-dark text-light fs-1"> 
+                                Publish
+                            </button>
+                        </div>
+                    {% endif %}    
+                </form>
+                 
+                <!-- <div class="editor editor-title editor-content-title editor-placeholder" contenteditable="true" 
                     data-placeholder="Post title...">{{ post.title|default:"Post title..." }}
                 </div>
                 <div class="editor editor-body editor-content-body editor-placeholder" contenteditable="true" 
                     data-placeholder="Start writing your content here...">{{ post.content|default:"Start writing your content here..." }}
-                </div>
-                {% if post %}
-                <div id="post-id" class="d-flex justify-content-end" data-post-id="{{post.id}}">
-                    <a href="" class="">
-                        <button type="button" class="btn btn-lg mt-3 px-5 bg-dark text-light fs-1" onclick="submitPost('update')"> 
-                        Update
-                        </button>
-                    </a>
-                </div>
-                {% else %}
-                    <div class="d-flex justify-content-end">
-                        <a href="" class="">
-                            <button type="button" class="btn btn-lg mt-3 px-5 bg-dark text-light fs-1" onclick="submitPost('publish')"> 
-                            Publish
-                            </button>
-                        </a>
-                    </div>
-                {% endif %}    
+                </div> -->
+                
             </div>
         </div>
     </div>
