--- a/templates/user_verse/blog_list.html
+++ b/templates/user_verse/blog_list.html
@@ -13,7 +13,7 @@
 <div class="col-10 p-4">
     <div class="container mt-4">
         {% if user_blogs %}
-            <div class="container channel-info-post">  
+            <div class="container channels-header">  
                 <div class="d-flex justify-content-center align-items-center pb-2"> 
                     <h3 class="text-light fs-2 fw-bolder pt-4">Blogs</h3>
                 </div>
